Resolved darkmode issue on mobile layout

--- a/public/Styles/header.css
+++ b/public/Styles/header.css
@@ -77,6 +77,9 @@
     cursor: pointer;
     color: var(--fontColor1);
 }
+.bx {
+    color: var(--fontColor1);
+}
 .menuOverlay {
     display: none;
     justify-content: center;
@@ -100,8 +103,6 @@
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-size: x-large;
-    /* background: var(--background1); */
-    background: pink;
     font-weight: 700;
 
 }
